--- a/.github/workflows/restock.yml
+++ b/.github/workflows/restock.yml
@@ -12,6 +12,13 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Download previous stock status artifact (if it exists)
+        uses: actions/download-artifact@v3
+        with:
+          name: stock_status.json
+          path: .
+        continue-on-error: true  # Don't fail if artifact doesn't exist yet
+
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
@@ -22,17 +29,11 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Restore stock status cache
-        uses: actions/cache@v3
-        with:
-          path: stock_status.json
-          key: stock-status-cache
-
-      - name: Run script
+      - name: Run Matcha Restock script
         env:
           IPPUDO_URL: ${{ secrets.IPPUDO_URL }}
           MATCHA_JP_URL: ${{ secrets.MATCHA_JP_URL }}
-          SAZEN_URLS:  ${{ secrets.SAZEN_URLS }}
+          SAZEN_URLS: ${{ secrets.SAZEN_URLS }}
           EMAIL_ADDRESS: ${{ secrets.EMAIL_ADDRESS }}
           EMAIL_PASSWORD: ${{ secrets.EMAIL_PASSWORD }}
           RECIPIENT_EMAIL: ${{ secrets.RECIPIENT_EMAIL }}
@@ -40,8 +41,8 @@ jobs:
         run: |
           python main.py
 
-      - name: Save stock status cache
-        uses: actions/cache@v3
+      - name: Upload updated stock status artifact
+        uses: actions/upload-artifact@v3
         with:
+          name: stock_status.json
           path: stock_status.json
-          key: stock-status-cache
