--- a/.github/workflows/restock.yml
+++ b/.github/workflows/restock.yml
@@ -13,11 +13,11 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Download previous stock status artifact (if it exists)
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v2
+        continue-on-error: true  # Avoid failing if artifact doesn't exist yet
         with:
-          name: stock_status.json
+          name: stock_status.json  # Must match the name used during upload
           path: .
-        continue-on-error: true  # Don't fail if artifact doesn't exist yet
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -42,7 +42,7 @@ jobs:
           python main.py
 
       - name: Upload updated stock status artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v2
         with:
-          name: stock_status.json
+          name: stock_status.json  # Must match the download step
           path: stock_status.json
