--- a/.github/workflows/restock.yml
+++ b/.github/workflows/restock.yml
@@ -9,14 +9,28 @@ jobs:
   check-restock:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
+      - name: Check out code
         uses: actions/checkout@v4
 
-      - name: Download previous stock status artifact (if it exists)
-        uses: actions/download-artifact@v4
-        continue-on-error: true  # Avoid failing if artifact doesn't exist yet
+      # 1) Ensure the file exists so hashFiles() won't fail.
+      #    If it's missing, we create an empty JSON object.
+      - name: Ensure stock_status.json exists
+        run: |
+          if [ ! -f "stock_status.json" ]; then
+            echo "{}" > stock_status.json
+          fi
+
+      # 2) Restore the cached file from a previous run, if it exists.
+      #    The 'restore-keys' means if the exact hash key isn't found,
+      #    it can fall back to a more generic cache if you wish.
+      - name: Restore stock status cache
+        id: cache-restore
+        uses: actions/cache@v3
         with:
-          name: stock_status  # Must match the name used during upload
+          path: stock_status.json
+          key: stock-status-${{ hashFiles('stock_status.json') }}
+          restore-keys: |
+            stock-status-
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -40,8 +54,14 @@ jobs:
         run: |
           python main.py
 
-      - name: Upload updated stock status artifact
-        uses: actions/upload-artifact@v4
+      # 3) After main.py updates 'stock_status.json', re-save the cache.
+      #    This will only create a NEW cache entry if the file changed.
+      #    Otherwise, it just uses the existing one.
+      - name: Save stock status cache
+        if: always()
+        uses: actions/cache@v3
         with:
-          name: stock_status
           path: stock_status.json
+          key: stock-status-${{ hashFiles('stock_status.json') }}
+          restore-keys: |
+            stock-status-
